Fix prediction module integration and cross-platform process handling